@@ -382,7 +382,7 @@ void KPlotWgtDrawer::ShowCtxMenu(const QPoint & pos)
 
 void KPlotWgtDrawer::RenderToImage()
 {
-	QString saveloc = KFileDialog::	getSaveFileName (KUrl(), "image/png", this, i18n("Select path to save image…"));
+	QString saveloc = KFileDialog::	getSaveFileName (KUrl("kfiledialog:///openTorrent"), "image/png", this, i18n("Select path to save image…"));
 	if(!saveloc.length())
 	{
 		return;
